# mindat-rs

./: CLAUDE.md  Cargo.toml  Mindat API.yaml  README.md
.github/workflows/: api-check.yml  ci.yml  release.yml
examples/: test_api.rs
gui/: .gitignore  README.md
gui/src/: index.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
src/: client.rs  error.rs  lib.rs
src/models/: common.rs  countries.rs  enums.rs  geomaterials.rs  localities.rs  minerals_ima.rs  mod.rs  pagination.rs  serde_helpers.rs
tests/: integration_test.rs
