[workspace]
members = [".", "gui/src-tauri"]
resolver = "2"

[package]
name = "mindat-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Rust client library for the Mindat API - access mineralogical data including geomaterials, localities, and IMA minerals"
license = "MIT"
repository = "https://github.com/jtk18/mindat-rs"
documentation = "https://docs.rs/mindat-rs"
readme = "README.md"
keywords = ["mindat", "mineralogy", "geology", "api", "minerals"]
categories = ["api-bindings", "science"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = []
blocking = []
