[package]
name = "mindat-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GUI for testing and exploring the Mindat API"
license = "MIT"
default-run = "mindat-gui"

[lib]
name = "mindat_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mindat-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mindat-rs = { path = "../.." }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"
